# Interface

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  requirements.txt
api/: .coverage  .env.example  Dockerfile  README.md  __init__.py  alembic.ini  config.py  crud.py  database.py  dependencies.py  docker-compose.yml  définition endpoints.md  exceptions.py  init_db.py  logging_config.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
api/Documentation/: Documentation_api.md  api_specification.md  doc_api_mspr.docx  définition endpoints.md
api/app/: main.py
api/app/core/: config.py  (+3 more)
api/etl/: __init__.py  loaders.py  resolve.py  run.py  transform.py  views.py
api/middleware/: api_key.py
api/migrations/: env.py
api/ml/: __init__.py  fragilite_model.py
api/models/: __init__.py  cluster.py  pagination.py  schemas.py  train_trip.py  trajet.py  ville.py
api/repositories/: __init__.py  carbon_repository.py  cluster_repository.py  interfaces.py  qualite_repository.py  stats_repository.py  territoire_repository.py  trajet_repository.py
api/routers/: __init__.py  analysis.py  analysis_router.py  carbon.py  carbon_router.py  carbone.py  clusters.py  compare.py  consultation_router.py  health.py  import_router.py  qualite.py  quality.py  quality_router.py  referential_router.py  routes.py  search_router.py  stats.py  stats_router.py  supervision.py  territoires.py  trajets.py
api/schemas/: __init__.py  carbon.py  common.py  depart.py  distance.py  fragilite.py  jour_nuit.py  liaison.py  operateur.py  overview.py  qualite.py  supervision.py  territoire.py  trajet.py
api/services/: __init__.py  carbon_service.py  explorer_service.py  fragilite_service.py  overview_service.py  qualite_service.py  territoire_service.py
api/tests/: conftest.py  test_carbon_api.py  test_carbon_service.py  test_cluster_model.py  test_error_handling.py  test_etl_loaders.py  test_etl_resolve.py  test_etl_seed.py  test_explorer_service.py  test_fragilite_api.py  test_fragilite_model.py  test_fragilite_service.py  test_health.py  test_logging.py  test_overview_service.py  test_predict_api.py  test_qualite_api.py  test_qualite_service.py  test_stats_api.py  test_supervision_api.py  test_territoire_service.py  test_territoires_api.py  test_trajet_model.py  test_trajets_api.py  test_views.py  test_ville_model.py
api/utils/: __init__.py  csv_export.py  query_helpers.py
dashboard/: .coverage  .dockerignore  Dockerfile  README.md  __init__.py  app.py  config.py  logging_config.py  main.py  pyproject.toml  theme.py
dashboard/api/: __init__.py  base.py  carbon_client.py  client.py  cluster_client.py  explorer_client.py  overview_client.py  qualite_client.py  supervision_client.py  territoire_client.py
dashboard/assets/: theme.css
dashboard/components/: __init__.py  carbon.py  charts.py  error.py  filters.py  fragilite.py  kpi.py  kpis.py  navbar.py  supervision.py  tables.py
dashboard/pages/: __init__.py  carbon.py  data.py  day_night.py  explorer.py  fragilite.py  overview.py  qualite.py  quality.py  referential.py  routes.py  supervision.py  territoires.py
dashboard/services/: __init__.py  api_client.py
dashboard/tests/: test_cluster_client.py  test_components_carbon.py  test_components_charts.py  test_components_fragilite.py  test_components_kpi.py  test_components_qualite.py  test_components_supervision.py  test_components_tables.py  test_components_territoires.py  test_explorer_client.py  test_qualite_client.py  test_smoke.py  test_supervision_client.py  test_territoire_client.py
dashboard/utils/: cache.py  theme.py
database/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
database/tests/: conftest.py  test_cluster_model.py  test_etl_loaders.py  test_etl_resolve.py  test_etl_seed.py  test_trajet_model.py  test_ville_model.py
(+58 files in other folders)
