[project]
name = "api"
version = "0.1.0"
description = "API REST ObRail Europe - backend FastAPI (MSPR TPRE532)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "joblib>=1.5.3",
    "numpy>=2.5.0",
    "obrail-database",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.19",
]

# Installe seulement les dépendances dans le venv.
[tool.uv]
package = false

[tool.uv.sources]
obrail-database = { path = "../database", editable = true }

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=70"

