[project]
name = "dashboard"
version = "0.1.0"
description = "Dashboard ObRail Europe"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=4.3.0",
    "gunicorn>=26.0.0",
    "plotly>=6.8.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.19",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=70"

