[project]
name = "obrail-database"
version = "0.1.0"
description = "Couche base de données ObRail : modèles ORM, migrations Alembic, vues et ETL."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adbc-driver-postgresql>=1.11.0",
    "alembic>=1.18.5",
    "pandas>=3.0.3",
    "polars>=1.42.0",
    "psycopg[binary]>=3.3.4",
    "pyarrow>=24.0.0",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
